--- a/eureka-server.properties
+++ b/eureka-server.properties
@@ -4,6 +4,6 @@ server.port=8761
 # Eureka Client Konfiguration
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
-
+eureka.instance.hostname=localhost
 # Eureka Server Konfiguration
 eureka.server.enable-self-preservation=false
