--- a/api-gateway.properties
+++ b/api-gateway.properties
@@ -23,7 +23,7 @@ spring.cloud.gateway.routes[0].id=sensor-service-route
 spring.cloud.gateway.routes[0].uri=lb://sensor-management
 spring.cloud.gateway.routes[0].predicates[0]=Path=/sensor/**
 
-spring.cloud.gateway.routes[1].id=measurement-service-route
+spring.cloud.gateway.routes[1].id=sensor-service-route
 spring.cloud.gateway.routes[1].uri=lb://sensor-management
 spring.cloud.gateway.routes[1].predicates[0]=Path=/measurement/**
 
