--- a/api-gateway.properties
+++ b/api-gateway.properties
@@ -23,9 +23,9 @@ spring.cloud.gateway.routes[0].id=sensor-service-route
 spring.cloud.gateway.routes[0].uri=lb://sensor-management
 spring.cloud.gateway.routes[0].predicates[0]=Path=/sensor/**
 
-spring.cloud.gateway.routes[1].id=measurement-service-route
-spring.cloud.gateway.routes[1].uri=lb://measurement-management
-spring.cloud.gateway.routes[1].predicates[0]=Path=/measurement/**
+spring.cloud.gateway.routes[1].id=sensor-service-route
+spring.cloud.gateway.routes[1].uri=lb://sensor-management
+spring.cloud.gateway.routes[1].predicates[0]=Path=/sensor/measurement/**
 
 # Eureka Client Konfiguration
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
