--- a/api-gateway.properties
+++ b/api-gateway.properties
@@ -19,13 +19,14 @@ spring.cloud.gateway.discovery.locator.enabled=true
 spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 
 # Gateway Routen Konfiguration
-spring.cloud.gateway.routes[0].id=sensor-service-route
+spring.cloud.gateway.routes[0].id=sensor-route
 spring.cloud.gateway.routes[0].uri=lb://sensor-management
 spring.cloud.gateway.routes[0].predicates[0]=Path=/sensor/**
 
-spring.cloud.gateway.routes[1].id=sensor-service-route
+spring.cloud.gateway.routes[1].id=measurement-route
 spring.cloud.gateway.routes[1].uri=lb://sensor-management
-spring.cloud.gateway.routes[1].predicates[0]=Path=/sensor/measurement/**
+spring.cloud.gateway.routes[1].predicates[0]=Path=/measurement/**
+
 
 # Eureka Client Konfiguration
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
