--- a/api-gateway.properties
+++ b/api-gateway.properties
@@ -20,11 +20,11 @@ spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 
 # Gateway Routen Konfiguration
 spring.cloud.gateway.routes[0].id=sensor-route
-spring.cloud.gateway.routes[0].uri=lb://sensor-management
+spring.cloud.gateway.routes[0].uri=lb://SENSOR-MANAGEMENT
 spring.cloud.gateway.routes[0].predicates[0]=Path=/sensor/**
 
 spring.cloud.gateway.routes[1].id=measurement-route
-spring.cloud.gateway.routes[1].uri=lb://sensor-management
+spring.cloud.gateway.routes[1].uri=lb://SENSOR-MANAGEMENT
 spring.cloud.gateway.routes[1].predicates[0]=Path=/measurement/**
 
 
