--- a/sensor-management.properties
+++ b/sensor-management.properties
@@ -19,3 +19,9 @@ spring.datasource.hikari.idle-timeout=30000
 spring.datasource.hikari.connection-timeout=30000
 # für registrierung eureka server mit unique id
 eureka.instance.instance-id=${spring.application.name}:${random.int}
+# CORS-Konfiguration
+spring.cloud.gateway.globalcors.cors-configurations.[/**].allowedOrigins=http://localhost:4200
+spring.cloud.gateway.globalcors.cors-configurations.[/**].allowedMethods=GET,POST,PUT,DELETE,OPTIONS
+spring.cloud.gateway.globalcors.cors-configurations.[/**].allowedHeaders=*
+spring.cloud.gateway.globalcors.cors-configurations.[/**].allowCredentials=true
+spring.cloud.gateway.globalcors.add-to-simple-url-handler-mapping=off
