--- a/api-gateway.properties
+++ b/api-gateway.properties
@@ -13,6 +13,7 @@ spring.cloud.gateway.globalcors.cors-configurations.[/**].allowedMethods=GET,POS
 spring.cloud.gateway.globalcors.cors-configurations.[/**].allowedHeaders=*
 spring.cloud.gateway.globalcors.cors-configurations.[/**].allowCredentials=true
 spring.cloud.gateway.globalcors.add-to-simple-url-handler-mapping=off
+spring.hateoas.uri=base-path=http://localhost:8081/sensor
 
 # Discovery Locator Konfiguration
 spring.cloud.gateway.discovery.locator.enabled=true
