--- a/sensor-management.properties
+++ b/sensor-management.properties
@@ -17,5 +17,7 @@ spring.datasource.hikari.maximum-pool-size=10
 spring.datasource.hikari.minimum-idle=2
 spring.datasource.hikari.idle-timeout=30000
 spring.datasource.hikari.connection-timeout=30000
+spring.cloud.config.enabled=false
+
 # für registrierung eureka server mit unique id
 eureka.instance.instance-id=${spring.application.name}:${random.int} 
