--- a/sensor-management.properties
+++ b/sensor-management.properties
@@ -2,7 +2,7 @@ server.port=0
 # Datenbankverbindung
 spring.datasource.url=jdbc:postgresql://localhost:5432/sensor_management
 spring.datasource.username=postgres
-spring.datasource.password=VaniUndLuki14
+spring.datasource.password=gruppee
 
 # JPA-Konfiguration
 # zuerst create für Tabellen Erstellung, dann auf update für Aktualisierung
