--- a/api-gateway.properties
+++ b/api-gateway.properties
@@ -8,7 +8,7 @@ eureka.client.fetchRegistry=true
 eureka.client.registerWithEureka=true
 
 # CORS-Konfiguration http://localhost:4200
-spring.cloud.gateway.globalcors.cors-configurations.[/**].allowedOrigins=*
+spring.cloud.gateway.globalcors.cors-configurations.[/**].allowedOriginPatterns=*
 spring.cloud.gateway.globalcors.cors-configurations.[/**].allowedMethods=GET,POST,PUT,DELETE,OPTIONS
 spring.cloud.gateway.globalcors.cors-configurations.[/**].allowedHeaders=*
 spring.cloud.gateway.globalcors.cors-configurations.[/**].allowCredentials=true
