--- a/sensor-management.properties
+++ b/sensor-management.properties
@@ -1,8 +1,8 @@
 server.port=0
 # Datenbankverbindung
 spring.datasource.url=jdbc:postgresql://localhost:5432/sensor_management
-spring.datasource.username=postgres
-spring.datasource.password=VaniUndLuki14
+spring.datasource.username=gruppee
+spring.datasource.password=gruppee
 
 # JPA-Konfiguration
 # zuerst create für Tabellen Erstellung, dann auf update für Aktualisierung
