--- a/sensor-management.properties
+++ b/sensor-management.properties
@@ -1,7 +1,7 @@
 server.port=0
 # Datenbankverbindung
 spring.datasource.url=jdbc:postgresql://localhost:5432/sensor_management
-spring.datasource.username=gruppee
+spring.datasource.username=postgres
 spring.datasource.password=gruppee
 
 # JPA-Konfiguration
