--- a/api-gateway.properties
+++ b/api-gateway.properties
@@ -1,5 +1,5 @@
-#server.address=0.0.0.0
-server.port=8082
+server.address=0.0.0.0
+server.port=8081
 
 # Discovery aktivieren
 spring.cloud.discovery.enabled=true
