--- a/api-gateway.properties
+++ b/api-gateway.properties
@@ -11,7 +11,7 @@ eureka.client.registerWithEureka=true
 
 # CORS-Konfiguration
 
-spring.cloud.gateway.globalcors.cors-configurations.[/**].allowedOrigins=http://localhost:4200
+spring.cloud.gateway.globalcors.cors-configurations.[/**].allowedOrigins=*
 spring.cloud.gateway.globalcors.cors-configurations.[/**].allowedMethods=GET,POST,PUT,DELETE,OPTIONS
 spring.cloud.gateway.globalcors.cors-configurations.[/**].allowedHeaders=*
 spring.cloud.gateway.globalcors.cors-configurations.[/**].allowCredentials=true
