--- a/api-gateway.properties
+++ b/api-gateway.properties
@@ -11,10 +11,10 @@ eureka.client.registerWithEureka=true
 
 # CORS-Konfiguration
 
-spring.cloud.gateway.globalcors.cors-configurations.[/**].allowedOrigins=http://192.168.1.136:8081
+spring.cloud.gateway.globalcors.cors-configurations.[/**].allowedOrigins=*
 spring.cloud.gateway.globalcors.cors-configurations.[/**].allowedMethods=GET,POST,PUT,DELETE,OPTIONS
 spring.cloud.gateway.globalcors.cors-configurations.[/**].allowedHeaders=*
-spring.cloud.gateway.globalcors.cors-configurations.[/**].allowCredentials=true
+spring.cloud.gateway.globalcors.cors-configurations.[/**].allowCredentials=false
 spring.cloud.gateway.globalcors.add-to-simple-url-handler-mapping=off
 spring.hateoas.uri=base-path=http://localhost:8081/sensor 
 
